# 42sh

./: Makefile  Makefile.in  README.md  a-conftest.gcno  config.status  configure  configure.ac
src/: 42sh-main.gcda  42sh-main.gcno  Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: 42sh-main.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.gcda  ast.gcno  ast.h
src/ast/.deps/: ast.Po
src/command/: Makefile  Makefile.am  Makefile.in  builtins.h  cd.c  cd.gcda  cd.gcno  command.c  command.gcda  command.gcno  command.h  dot.c  dot.gcda  dot.gcno  exit.c  exit.gcda  exit.gcno  export.c  export.gcda  export.gcno
src/exec/: Makefile  Makefile.am  Makefile.in  exec.c  exec.gcda  exec.gcno  exec.h  redir.c
src/io_backend/: Makefile  Makefile.am  Makefile.in  io_backend.c  io_backend.h  libio_a-io_backend.gcda  libio_a-io_backend.gcno
src/lexer/: Makefile  Makefile.am  Makefile.in  grammar_rules.c  grammar_rules.h  lexer.c  lexer.h  liblexer_a-grammar_rules.gcda  liblexer_a-grammar_rules.gcno  liblexer_a-lexer.gcda  liblexer_a-lexer.gcno
src/parser/: Makefile  Makefile.am  Makefile.in  parser.gcda  parser.gcno  parser1.c  parser1.gcda  parser1.gcno  parser1.h  parser2.c  parser2.gcda  parser2.gcno  parser2.h
src/word_expand/: Makefile  Makefile.am  Makefile.in  handle_dollar.c  handle_dollar.h  libwordex_a-handle_dollar.gcda  libwordex_a-handle_dollar.gcno  libwordex_a-variables.gcda  libwordex_a-variables.gcno  libwordex_a-word_expand.gcda  libwordex_a-word_expand.gcno  variables.c  variables.h  word_expand.c  word_expand.h
tests/: Makefile  (+7 more)
(+128 files in other folders)
